--- a/funtions/MLparaDetectarFraudes.ipynb
+++ b/funtions/MLparaDetectarFraudes.ipynb
@@ -71,7 +71,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "I_4ktf2CLhUD"
       },
@@ -100,7 +100,10 @@
         "\n",
         "\n",
         "from xgboost import XGBClassifier\n",
-        "from lightgbm import LGBMClassifier"
+        "from lightgbm import LGBMClassifier\n",
+        "\n",
+        "\n",
+        "import features.paths as path"
       ]
     },
     {
