--- a/notebooks/02-Preparation.ipynb
+++ b/notebooks/02-Preparation.ipynb
@@ -27,10 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "a010ad85",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2979718992.py, line 27)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 27\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mfrom matplotlib. import style\u001b[39m\n                     ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "import os\n",
@@ -79,6 +88,17 @@
     "categorical_cols = X.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "numerical_cols = X.select_dtypes(include=['int64', 'float64']).columns.tolist()\n",
     "\n",
+    "print(\"Columnas numéricas:\", numerical_cols)\n",
+    "print(\"Columnas categóricas:\", categorical_cols)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a13c50b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create preprocessing pipelines\n",
     "numerical_transformer = Pipeline(steps=[\n",
     "    ('imputer', SimpleImputer(strategy='median')), #Reemplazar valores faltantes con la mediana\n",
@@ -98,8 +118,7 @@
     "    ])\n",
     "\n",
     "X_processed = preprocessor.fit_transform(X)\n",
-    "X_processed.shape()\n",
-    "\n"
+    "X_processed.shape()"
    ]
   },
   {
