--- a/notebooks/01-EDA.ipynb
+++ b/notebooks/01-EDA.ipynb
@@ -2267,7 +2267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "id": "9e5e5f0b",
    "metadata": {},
    "outputs": [
@@ -2275,36 +2275,135 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Analisis de fraude si es alguno de los casos: {device_type== mobile y os_type== Windows} al mismo tiempo ó is_dead_user== 1 ó unusual_device_combo== 1\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Probabilidad de fraude: 1.0\n",
+      "Analisis de fraude si es alguno de los casos: {device_type== mobile y os_type== Windows} al mismo tiempo ó is_dead_user== 1 ó unusual_device_combo== 1\n",
+      "Probabilidad de fraude: 1.0000\n",
       "Dinero perdido por fraude $14,939,706.85\n",
-      "Porcentaje de perdida  por fraude respecto al total de transacciones: 70.671391%\n",
-      "Porcentaje de perdida por fraude respecto al total de transacciones no fraudulentas: 0.000366%\n",
-      "Porcentaje de perdida de los fraudes del total de fraudes: 35.743858%\n",
+      "Porcentaje de perdida por fraude respecto al total de transacciones: 14.84%\n",
+      "Porcentaje de perdida por fraude respecto al total de transacciones no fraudulentas: 25.37%\n",
+      "Porcentaje de perdida de los fraudes del total de fraudes: 35.74%\n",
       "Cantidad de fraudes: 7,533\n",
-      "Porcentaje de la cantidad de fraudes respecto a la cantidad total de fraudes: 40.95357181689682%\n",
+      "Porcentaje de la cantidad de fraudes respecto a la cantidad total de fraudes: 40.95%\n",
       "--------------------\n"
      ]
     }
    ],
    "source": [
     "# Analisis de fraude device_type== mobile, os_type== Windows, is_dead_user== 1, unusual_device_combo== 1\n",
-    "\n",
     "print(\"Analisis de fraude si es alguno de los casos: {device_type== mobile y os_type== Windows} al mismo tiempo ó is_dead_user== 1 ó unusual_device_combo== 1\")\n",
-    "print(f\"Probabilidad de fraude: {(data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)].shape[0] / data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1)].shape[0])}\")\n",
-    "print(f\"Dinero perdido por fraude ${data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)]['amount'].sum().round(2):,}\")\n",
-    "print(f\"Porcentaje de perdida  por fraude respecto al total de transacciones: {(data[(data['device_type'] == 'mobile') | (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)]['amount'].sum() / data['amount'].sum() * 100).round(6)}%\")\n",
-    "print(f\"Porcentaje de perdida por fraude respecto al total de transacciones no fraudulentas: {(data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') & (data['is_dead_user'] == 1) & (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)]['amount'].sum() / data[data['is_fraud'] == 0]['amount'].sum() * 100).round(6)}%\")\n",
-    "print(f\"Porcentaje de perdida de los fraudes del total de fraudes: {(data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)]['amount'].sum() / data[data['is_fraud'] == 1]['amount'].sum() * 100).round(6)}%\")\n",
-    "print(f\"Cantidad de fraudes: {data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)].shape[0]:,}\")\n",
-    "print(f\"Porcentaje de la cantidad de fraudes respecto a la cantidad total de fraudes: {(data[(data['device_type'] == 'mobile') & (data['os_type'] == 'Windows') | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1) & (data['is_fraud'] == 1)].shape[0] / data[data['is_fraud'] == 1].shape[0] * 100)}%\")\n",
+    "\n",
+    "# Definir la condición de casos atípicos de forma legible\n",
+    "condiciones = ((data['device_type'] == 'mobile') & (data['os_type'] == 'Windows')) | (data['is_dead_user'] == 1) | (data['unusual_device_combo'] == 1)\n",
+    "\n",
+    "# Subconjunto de fraudes dentro de los casos atípicos\n",
+    "fraudes_condiciones = condiciones & (data['is_fraud'] == 1)\n",
+    "\n",
+    "# Probabilidad de fraude en los casos atípicos\n",
+    "prob_fraude = data[fraudes_condiciones].shape[0] / data[condiciones].shape[0] if data[condiciones].shape[0] > 0 else 0\n",
+    "print(f\"Probabilidad de fraude: {prob_fraude:.4f}\")\n",
+    "\n",
+    "# Dinero perdido por fraude en los casos atípicos\n",
+    "dinero_perdido = data[fraudes_condiciones]['amount'].sum().round(2)\n",
+    "print(f\"Dinero perdido por fraude ${dinero_perdido:,}\")\n",
+    "\n",
+    "# Porcentaje de pérdida por fraude respecto al total de transacciones\n",
+    "porc_perdida_total = (dinero_perdido / data['amount'].sum() * 100).round(6) if data['amount'].sum() > 0 else 0\n",
+    "print(f\"Porcentaje de perdida por fraude respecto al total de transacciones: {porc_perdida_total:.2f}%\")\n",
+    "\n",
+    "# Porcentaje de pérdida por fraude respecto al total de transacciones no fraudulentas\n",
+    "monto_no_fraude = data[data['is_fraud'] == 0]['amount'].sum()\n",
+    "porc_perdida_no_fraude = (dinero_perdido / monto_no_fraude * 100).round(6) if monto_no_fraude > 0 else 0\n",
+    "print(f\"Porcentaje de perdida por fraude respecto al total de transacciones no fraudulentas: {porc_perdida_no_fraude:.2f}%\")\n",
+    "\n",
+    "# Porcentaje de pérdida de los fraudes del total de fraudes\n",
+    "monto_fraude = data[data['is_fraud'] == 1]['amount'].sum()\n",
+    "porc_perdida_fraudes = (dinero_perdido / monto_fraude * 100).round(6) if monto_fraude > 0 else 0\n",
+    "print(f\"Porcentaje de perdida de los fraudes del total de fraudes: {porc_perdida_fraudes:.2f}%\")\n",
+    "\n",
+    "# Cantidad de fraudes en los casos atípicos\n",
+    "cantidad_fraudes = data[fraudes_condiciones].shape[0]\n",
+    "print(f\"Cantidad de fraudes: {cantidad_fraudes:,}\")\n",
+    "\n",
+    "# Porcentaje de la cantidad de fraudes respecto a la cantidad total de fraudes\n",
+    "total_fraudes = data[data['is_fraud'] == 1].shape[0]\n",
+    "porc_cantidad_fraudes = (cantidad_fraudes / total_fraudes * 100) if total_fraudes > 0 else 0\n",
+    "print(f\"Porcentaje de la cantidad de fraudes respecto a la cantidad total de fraudes: {porc_cantidad_fraudes:.2f}%\")\n",
     "print(\"--------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca38c8bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29d4a844",
+   "metadata": {},
+   "source": [
+    "## Guardado de subconjuntos de datos procesados y reporte\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5fd9a489",
+   "metadata": {},
+   "source": [
+    "En esta sección se guardan dos DataFrames en la carpeta `data/processed`:\n",
+    "\n",
+    "1. **data_filtrado.csv**: Contiene solo los casos que NO cumplen con las siguientes condiciones:\n",
+    "   - `device_type == 'mobile'` y `os_type == 'Windows'`\n",
+    "   - `is_dead_user == 1`\n",
+    "   - `unusual_device_combo == 1`\n",
+    "   Además, se eliminan las columnas `unusual_device_combo` y `is_dead_user`.\n",
+    "\n",
+    "2. **data_descartados.csv**: Contiene los casos que SÍ cumplen con alguna de las condiciones anteriores, con todas las columnas originales.\n",
+    "\n",
+    "Esto permite separar los datos \"limpios\" para modelado y los casos atípicos para análisis posterior."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "41ca2d08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Guardado de subconjuntos de datos procesados\n",
+    "\n",
+    "# Definir el directorio de salida\n",
+    "from pathlib import Path\n",
+    "processed_dir = Path('../data/processed')\n",
+    "processed_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Definir la condición para casos atípicos\n",
+    "cond_outlier = (\n",
+    "    (data['device_type'] == 'mobile') & (data['os_type'] == 'Windows')\n",
+    "    | (data['is_dead_user'] == 1)\n",
+    "    | (data['unusual_device_combo'] == 1)\n",
+    ")\n",
+    "\n",
+    "# DataFrame filtrado: solo casos \"limpios\" para modelado\n",
+    "data_filtrado = data.loc[~cond_outlier].copy()\n",
+    "# Eliminar columnas de condiciones atípicas\n",
+    "data_filtrado = data_filtrado.drop(['unusual_device_combo', 'is_dead_user'], axis=1)\n",
+    "\n",
+    "# DataFrame descartados: solo casos atípicos, todas las columnas\n",
+    "data_descartados = data.loc[cond_outlier].copy()\n",
+    "\n",
+    "# Guardar ambos DataFrames en CSV en la carpeta processed\n",
+    "data_filtrado.to_csv(processed_dir / 'data_filtrado.csv', index=False)\n",
+    "data_descartados.to_csv(processed_dir / 'data_descartados.csv', index=False)\n",
+    "\n",
+    "print(\"DataFrame filtrado guardado en: data/processed/data_filtrado.csv (sin columnas 'unusual_device_combo' y 'is_dead_user')\")\n",
+    "print(\"DataFrame descartados guardado en: data/processed/data_descartados.csv (todas las columnas, solo casos atípicos)\")\n",
+    "\n",
+    "# Documentación:\n",
+    "# - 'data_filtrado.csv': solo casos limpios para modelado, sin columnas de condiciones atípicas.\n",
+    "# - 'data_descartados.csv': solo casos atípicos, todas las columnas originales."
    ]
   },
   {
