--- a/notebooks/02-Preparation.ipynb
+++ b/notebooks/02-Preparation.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a010ad85",
    "metadata": {},
    "outputs": [
@@ -45,32 +45,23 @@
     "import os\n",
     "sys.path.append(os.path.abspath(\"..\"))\n",
     "\n",
-    "from mlparadetectarfraudes.data import data\n",
-    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import joblib\n",
-    "from imblearn.over_sampling import SMOTE\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold #StratifiedKFold para modelo distinto a RandomForest\n",
-    "from sklearn.metrics import confusion_matrix, classification_report, f1_score #accuracy_score\n",
-    "from sklearn.preprocessing import StandardScaler ,OneHotEncoder, scale\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1b72091",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cargar el DataFrame filtrado desde data/processed\n",
+    "data_filtrado = pd.read_csv('../data/processed/data_filtrado.csv')\n",
     "\n",
-    "from datetime import datetime, timedelta\n",
-    "from sklearn.pipeline import Pipeline, make_pipeline # Corrected from Pipelines\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.decomposition import PCA\n",
-    "\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.font_manager\n",
-    "from matplotlib. import style\n",
-    "style.use(\"ggplot\") or plt.style.use(\"ggplot\")\n",
-    "import statsmodels.api as sm\n",
-    "from Ipython.display import display"
+    "# Verificar la carga\n",
+    "print('Shape de data_filtrado:', data_filtrado.shape)\n",
+    "print('Columnas:', data_filtrado.columns.tolist())"
    ]
   },
   {
