--- a/notebooks/01-EDA.ipynb
+++ b/notebooks/01-EDA.ipynb
@@ -1676,7 +1676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "41ca2d08",
    "metadata": {},
    "outputs": [
@@ -1684,8 +1684,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFrame filtrado guardado en: data/processed/data_filtrado.csv (sin columnas 'unusual_device_combo' y 'is_dead_user')\n",
-      "DataFrame descartados guardado en: data/processed/data_descartados.csv (todas las columnas, solo casos atípicos)\n"
+      "DataFrame filtrado guardado en: data/processed/EDA-data_filtrada.csv (sin columnas 'unusual_device_combo' y 'is_dead_user')\n",
+      "DataFrame descartados guardado en: data/processed/EDA-data_descartada.csv (todas las columnas, solo casos atípicos)\n"
      ]
     }
    ],
@@ -1698,30 +1698,30 @@
     "processed_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Definir la condición para casos atípicos\n",
-    "cond_outlier = (\n",
+    "condiciones_de_peor_fraude = (\n",
     "    (data['device_type'] == 'mobile') & (data['os_type'] == 'Windows')\n",
     "    | (data['is_dead_user'] == 1)\n",
     "    | (data['unusual_device_combo'] == 1)\n",
     ")\n",
     "\n",
     "# DataFrame filtrado: solo casos \"limpios\" para modelado\n",
-    "data_filtrado = data.loc[~cond_outlier].copy()\n",
+    "data_filtrado = data.loc[~condiciones_de_peor_fraude].copy()\n",
     "# Eliminar columnas de condiciones atípicas\n",
     "data_filtrado = data_filtrado.drop(['unusual_device_combo', 'is_dead_user'], axis=1)\n",
     "\n",
     "# DataFrame descartados: solo casos atípicos, todas las columnas\n",
-    "data_descartados = data.loc[cond_outlier].copy()\n",
+    "data_descartados = data.loc[condiciones_de_peor_fraude].copy()\n",
     "\n",
     "# Guardar ambos DataFrames en CSV en la carpeta processed\n",
-    "data_filtrado.to_csv(processed_dir / 'data_filtrado.csv', index=False)\n",
-    "data_descartados.to_csv(processed_dir / 'data_descartados.csv', index=False)\n",
+    "data_filtrado.to_csv(processed_dir / 'EDA-data_filtrada.csv', index=False)\n",
+    "data_descartados.to_csv(processed_dir / 'EDA-data_descartada.csv', index=False)\n",
     "\n",
-    "print(\"DataFrame filtrado guardado en: data/processed/data_filtrado.csv (sin columnas 'unusual_device_combo' y 'is_dead_user')\")\n",
-    "print(\"DataFrame descartados guardado en: data/processed/data_descartados.csv (todas las columnas, solo casos atípicos)\")\n",
+    "print(\"DataFrame filtrado guardado en: data/processed/EDA-data_filtrada.csv (sin columnas 'unusual_device_combo' y 'is_dead_user')\")\n",
+    "print(\"DataFrame descartados guardado en: data/processed/EDA-data_descartada.csv (todas las columnas, solo casos atípicos)\")\n",
     "\n",
     "# Documentación:\n",
-    "# - 'data_filtrado.csv': solo casos limpios para modelado, sin columnas de condiciones atípicas.\n",
-    "# - 'data_descartados.csv': solo casos atípicos, todas las columnas originales."
+    "# - 'EDA-data_filtrada.csv': solo casos limpios para modelado, sin columnas de condiciones atípicas.\n",
+    "# - 'EDA-data_descartada.csv': solo casos con probabilidad de fraude demasiado elevadas, todas las columnas originales."
    ]
   },
   {
