--- a/notebooks/04-RadomForest.ipynb
+++ b/notebooks/04-RadomForest.ipynb
@@ -197,7 +197,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data_estandarizados = pd.read_csv(data_interim_dir(\"data_estandarizados.csv\"))"
+    "# Cargar el DataFrame filtrado desde data/processed\n",
+    "X_processed_df = pd.read_csv('../data/processed/Preparation-X_processed_df.csv')\n",
+    "data_filtrada = pd.read_csv('../data/processed/EDA-data_filtrada.csv')\n",
+    "y = data_filtrada['is_fraud']"
    ]
   },
   {
