Empezando con random forest

--- a/notebooks/03-PCA.ipynb
+++ b/notebooks/03-PCA.ipynb
@@ -65,7 +65,10 @@
     "\n",
     "   2.3. [Aumentando la cantidad de componentes](#aumentando-la-cantidad-de-componentes) \n",
     "\n",
-    "3. [Busco anomalías](#busco-anomalías)"
+    "\n",
+    "3. [Guardamos el modelo](#guardamos-el-modelo)\n",
+    "\n",
+    "4. [Busco anomalías](#busco-anomalías)"
    ]
   },
   {
@@ -629,6 +632,46 @@
     "plt.grid(True)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "600d937c",
+   "metadata": {},
+   "source": [
+    "# Guardamos el modelo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "36566628",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "import joblib\n",
+    "\n",
+    "# Entrena el modelo PCA\n",
+    "#pca = PCA(n_components=9)\n",
+    "#componentes = pca.fit_transform(X_processed_df)\n",
+    "\n",
+    "# Guarda el modelo PCA (se entrenó más arriba)\n",
+    "joblib.dump(pca, '../models/pca_9componentes.joblib')\n",
+    "\n",
+    "#Guarda el dataframe (se creó más arriba)\n",
+    "#pca_df = pd.DataFrame(componentes, columns=[f'PC{i+1}' for i in range(componentes.shape[1])])\n",
+    "#pca_df['is_fraud'] = y.values\n",
+    "pca_df.to_csv('../data/processed/pca_df.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c481a15b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
