--- a/notebooks/04-RadomForest.ipynb
+++ b/notebooks/04-RadomForest.ipynb
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "93fd379f",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "12932bce",
    "metadata": {},
    "outputs": [],
@@ -172,9 +172,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.compose import ColumnTransformer\n",
+    "#from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
+    "#from sklearn.impute import SimpleImputer\n",
+    "#from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "66f4fc23",
    "metadata": {},
    "outputs": [],
@@ -204,6 +204,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "fe8223f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import joblib\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Cargar el modelo PCA\n",
+    "pca = joblib.load('../models/pca_9componentes.joblib')\n",
+    "\n",
+    "# Cargar los datos originales y pca\n",
+    "pca_df = pd.read_csv('../data/processed/pca_df.csv')\n",
+    "\n",
+    "\n",
+    "# Cargar la variable objetivo\n",
+    "\n",
+    "X_processed_df = pd.read_csv('../data/processed/Preparation-X_processed_df.csv')\n",
+    "data_filtrada = pd.read_csv('../data/processed/EDA-data_filtrada.csv')\n",
+    "y = data_filtrada['is_fraud']\n",
+    "X = data_filtrada.drop(['is_fraud', 'transaction_datetime','user_id'], axis=1)\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e5b11380",
    "metadata": {},
@@ -211,10 +236,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "c858012e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'rf_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# Importancia de características\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m feature_importances = pd.Series(rf_model.feature_importances_, index=X.columns)\n\u001b[32m      5\u001b[39m feature_importances.nlargest(\u001b[32m10\u001b[39m).plot(kind=\u001b[33m'\u001b[39m\u001b[33mbarh\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      6\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mTop 10 Importancia de Características\u001b[39m\u001b[33m'\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'rf_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -590,7 +627,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
